--- a/GridTest7/Shared/NavMenu.razor
+++ b/GridTest7/Shared/NavMenu.razor
@@ -26,7 +26,8 @@
                     <div @onclick="Collapse">
                         <DxMenu Orientation="@Orientation.Vertical" CssClass="menu">
                             <Items>
-                                <DxMenuItem NavigateUrl="/" Text="Grid" CssClass="menu-item" IconCssClass="icon home-icon"></DxMenuItem>
+                                <DxMenuItem NavigateUrl="/" Text="Grid Layout" CssClass="menu-item" IconCssClass="icon home-icon"></DxMenuItem>
+                                <DxMenuItem NavigateUrl="/GridPage" Text="Grid Page" CssClass="menu-item" IconCssClass="icon home-icon"></DxMenuItem>
                                 <DxMenuItem NavigateUrl="/Home" Text="Home" CssClass="menu-item" IconCssClass="icon home-icon"></DxMenuItem>
                                 <DxMenuItem NavigateUrl="/counter" Text="Counter" CssClass="menu-item" IconCssClass="icon counter-icon"></DxMenuItem>
                                 <DxMenuItem NavigateUrl="/weather" Text="Weather" CssClass="menu-item" IconCssClass="icon weather-icon"></DxMenuItem>
